# Django-Template

./: LICENSE  cookiecutter.json  pyproject.toml  readme.md
hooks/: post_gen_project.py  pre_prompt.py
{{ cookiecutter.project_slug }}/: .gitattributes  .pre-commit-config.yaml  biome.json  manage.py  package.json  pyproject.toml  readme.md  tailwind.config.mjs  vite.config.js
{{ cookiecutter.project_slug }}/apps/cpt/: apps.py
{{ cookiecutter.project_slug }}/apps/cpt/management/commands/: createapp.py  createview.py
{{ cookiecutter.project_slug }}/apps/cpt/templates/cpt/: admin.py.template  apps.py.template  forms.py.template  managers.py.template  models.py.template  urls.py.template  view.html.template  views.py.template
{{ cookiecutter.project_slug }}/project/: asgi.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.project_slug }}/resources/: index.js
{{ cookiecutter.project_slug }}/resources/scss/: index.scss
{{ cookiecutter.project_slug }}/templates/: application.html
{{ cookiecutter.project_slug }}/tests/e2e/: test_example_e2e.py
{{ cookiecutter.project_slug }}/tests/integration/: test_example.py
